add server endpoints
